--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
-  "name": "sequelize-hierarchy",
-  "version": "1.3.1",
+  "name": "@wize/sequelize-hierarchy",
+  "version": "1.0.0",
   "description": "Nested hierarchies for Sequelize",
   "main": "./lib/",
   "author": {
-    "name": "Overlook Motel"
+    "name": "Wizni Inc."
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/overlookmotel/sequelize-hierarchy.git"
+    "url": "git://github.com/wizspark/sequelize-hierarchy.git"
   },
   "bugs": {
-    "url": "https://github.com/overlookmotel/sequelize-hierarchy/issues"
+    "url": "https://github.com/wizspark/sequelize-hierarchy/issues"
   },
   "dependencies": {
     "lodash": "^4.17.4",
