--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@wize/sequelize-hierarchy",
-  "version": "2.0.4",
+  "version": "2.0.5-beta.0",
   "description": "Nested hierarchies for Sequelize",
   "main": "./lib/",
   "author": {
